<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.signup_activity"
   >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/aboutshowhead"
            android:padding="8dp"
            android:text="SIGN UP"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/etemailid"
        android:layout_width="282dp"
        android:layout_height="49dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/coustem_input"
        android:drawableStart="@drawable/focuse_email_res"
        android:drawablePadding="20dp"
        android:paddingEnd="12dp"

        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="#000000"
        android:inputType="textPersonName"
        android:textDirection="firstStrong"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="282dp"
        android:layout_height="49dp"
        android:layout_marginTop="72dp"
        android:drawablePadding="20dp"
        android:paddingEnd="12dp"
        android:drawableStart="@drawable/focuse_lock_res"
        android:background="@drawable/coustem_input"

        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="#000000"
        android:inputType="textPassword"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etemailid" />

    <Button
        android:id="@+id/SignUp_btn"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="88dp"
        android:background="#4EDD0D"
        android:text="@string/Signup"
        app:backgroundTint="#4EDD0D"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/having_acc_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etpassword"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/having_acc_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="@string/Already"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>